tests/derive_rc/fails/receiver_mut.rs
extern crate blanket;

use blanket::blanket;

#[blanket(derive(Rc))]
pub trait Counter {
    fn increment(&mut self);
}

fn main() {}
