tests/derive_rc/fails/receiver_mut.stderr
error: cannot derive `Rc` for a trait declaring `&mut self` methods
 --> tests/derive_rc/fails/receiver_mut.rs:7:18
  |
7 |     fn increment(&mut self);
  |                  ^^^^^^^^^
